# codex_RAG_with_DeepEval

./: .gitignore  README.md  TABLE_SUPPORT_COMPLETE.md  WORKPLAN.md  best_practices.md  chunks_output.txt  eval_summary.json  generate_chunks_report.py  pyproject.toml  test_table_detection_quick.py  tmp_chat_snip.txt  tmp_readme_lines.txt
data/index/: chunks.pkl  faiss.index
data/index/eval/: eval_qrels.jsonl  eval_queries.jsonl
docs/: BRANCH_CREATION_SUMMARY.md  PHASE2_COMPLETION.md  QUICK_REFERENCE.md  QUICK_REFERENCE.sh  TABLE_SUPPORT_BRANCH.md  flow.md
examples/: table_aware_chunking_example.py
scripts/: chat_ui_streamlit.py  eval_retriever_deepeval.py  generate_eval_set.py  ingest.py  query.py
src/rag_practice/: __init__.py
src/rag_practice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rag_practice/adapters/: __init__.py  chunking.py  container.py  faiss_index.py  openai_embedder.py  pdf_loader.py
src/rag_practice/application/: __init__.py  use_cases.py
src/rag_practice/domain/: __init__.py  models.py  ports.py  text_utils.py
tests/: test_chunking.py  test_faiss_index.py  test_faiss_persist.py  test_table_extraction_phase2.py  test_table_models.py
